--- a/index.html
+++ b/index.html
@@ -59,7 +59,13 @@
             </div>
           </div>
         </div>
-
+         <div class="bottom-area">
+          <div class="container">
+            <button class="toggle-btn">
+              <i class="far fa-moon"></i>
+            </button>
+          </div>
+        </div>
       </div>
     </main>
 
